[gd_scene load_steps=7 format=4 uid="uid://b736g1flpuw4c"]

[ext_resource type="Script" path="res://levels/dq_zelemir/dq_zelemir.gd" id="1_5menr"]
[ext_resource type="TileSet" uid="uid://bmdyj28ichv7b" path="res://assets/tilesets/vectorTDTileSet.tres" id="2_1i7em"]
[ext_resource type="Texture2D" uid="uid://8wjbidyesgmw" path="res://levels/dq_zelemir/elliott-butler-screenshot01.jpg" id="2_we7ul"]
[ext_resource type="PackedScene" uid="uid://cawdmj8me57o0" path="res://scenes/strobe_square/strobe_square.tscn" id="4_tus8s"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_w5hd5"]
size = Vector2(1150, 850)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyeby"]
size = Vector2(30, 50)

[node name="Map" type="Node2D"]
script = ExtResource("1_5menr")

[node name="MapArea" type="Sprite2D" parent="."]
position = Vector2(525, 375)
texture = SubResource("PlaceholderTexture2D_w5hd5")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
offset_right = 1100.0
offset_bottom = 800.0
texture = ExtResource("2_we7ul")
expand_mode = 1

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAADAAAABAAAAAAAAAADAAEABAAAAAAAAAADAAIABAAAAAAAAAADAAMABAAAAAAAAAADAAQABAAAAAAAAAADAAUABAAAAAAAAAADAAYABAAAAAAAAAADAAcABAAAAAAAAAADAAgABAAAAAAAAAADAAkABAAAAAAAAAADAAoABAAAAAAAAAADAAsABAAAAAAAAAADAAwABAAAAAAAAAADAA0ABAAAAAAAAAADAA4ABAAAAAAAAAAEAAAABAAAAAAAAAAEAAEABAAAAAAAAAAEAAIABAAAAAAAAAAEAAMABAAAAAAAAAAEAAQABAAAAAAAAAAEAAUABAAAAAAAAAAEAAYABAAAAAAAAAAEAAcABAAAAAAAAAAEAAgABAAAAAAAAAAEAAkABAAAAAAAAAAEAAoABAAAAAAAAAAEAAsABAAAAAAAAAAEAAwABAAAAAAAAAAEAA0ABAAAAAAAAAAEAA4ABAAAAAAAAAAFAAAABAAAAAAAAAAFAAEABAAAAAAAAAAFAAIABAAAAAAAAAAFAAMABAAAAAAAAAAFAAQABAAAAAAAAAAFAAUABAAAAAAAAAAFAAYABAAAAAAAAAAFAAcABAAAAAAAAAAFAAgABAAAAAAAAAAFAAkABAAAAAAAAAAFAAoABAAAAAAAAAAFAAsABAAAAAAAAAAFAAwABAAAAAAAAAAFAA0ABAAAAAAAAAAFAA4ABAAAAAAAAAAGAAAABAAAAAAAAAAGAAEABAAAAAAAAAAGAAIABAAAAAAAAAAGAAMABAAAAAAAAAAGAAQABAAAAAAAAAAGAAUABAAAAAAAAAAGAAYABAAAAAAAAAAGAAcABAAAAAAAAAAGAAgABAAAAAAAAAAGAAkABAAAAAAAAAAGAAoABAAAAAAAAAAGAAsABAAAAAAAAAAGAAwABAAAAAAAAAAGAA0ABAAAAAAAAAAGAA4ABAAAAAAAAAAHAAAABAAAAAAAAAAHAAEABAAAAAAAAAAHAAIABAAAAAAAAAAHAAMABAAAAAAAAAAHAAQABAAAAAAAAAAHAAUABAAAAAAAAAAHAAYABAAAAAAAAAAHAAcABAAAAAAAAAAHAAgABAAAAAAAAAAHAAkABAAAAAAAAAAHAAoABAAAAAAAAAAHAAsABAAAAAAAAAAHAAwABAAAAAAAAAAHAA0ABAAAAAAAAAAHAA4ABAAAAAAAAAAIAAAABAAAAAAAAAAIAAEABAAAAAAAAAAIAAIABAAAAAAAAAAIAAMABAAAAAAAAAAIAAQABAAAAAAAAAAIAAUABAAAAAAAAAAIAAYABAAAAAAAAAAIAAcABAAAAAAAAAAIAAgABAAAAAAAAAAIAAkABAAAAAAAAAAIAAoABAAAAAAAAAAIAAsABAAAAAAAAAAIAAwABAAAAAAAAAAIAA0ABAAAAAAAAAAIAA4ABAAAAAAAAAAJAAAABAAAAAAAAAAJAAEABAAAAAAAAAAJAAIABAAAAAAAAAAJAAMABAAAAAAAAAAJAAQABAAAAAAAAAAJAAUABAAAAAAAAAAJAAYABAAAAAAAAAAJAAcABAAAAAAAAAAJAAgABAAAAAAAAAAJAAkABAAAAAAAAAAJAAoABAAAAAAAAAAJAAsABAAAAAAAAAAJAAwABAAAAAAAAAAJAA0ABAAAAAAAAAAJAA4ABAAAAAAAAAAKAAAABAAAAAAAAAAKAAEABAAAAAAAAAAKAAIABAAAAAAAAAAKAAMABAAAAAAAAAAKAAQABAAAAAAAAAAKAAUABAAAAAAAAAAKAAYABAAAAAAAAAAKAAcABAAAAAAAAAAKAAgABAAAAAAAAAAKAAkABAAAAAAAAAAKAAoABAAAAAAAAAAKAAsABAAAAAAAAAAKAAwABAAAAAAAAAAKAA0ABAAAAAAAAAAKAA4ABAAAAAAAAAALAAAABAAAAAAAAAALAAEABAAAAAAAAAALAAIABAAAAAAAAAALAAMABAAAAAAAAAALAAQABAAAAAAAAAALAAUABAAAAAAAAAALAAYABAAAAAAAAAALAAcABAAAAAAAAAALAAgABAAAAAAAAAALAAkABAAAAAAAAAALAAoABAAAAAAAAAALAAsABAAAAAAAAAALAAwABAAAAAAAAAALAA0ABAAAAAAAAAALAA4ABAAAAAAAAAAMAAAABAAAAAAAAAAMAAEABAAAAAAAAAAMAAIABAAAAAAAAAAMAAMABAAAAAAAAAAMAAQABAAAAAAAAAAMAAUABAAAAAAAAAAMAAYABAAAAAAAAAAMAAcABAAAAAAAAAAMAAgABAAAAAAAAAAMAAkABAAAAAAAAAAMAAoABAAAAAAAAAAMAAsABAAAAAAAAAAMAAwABAAAAAAAAAAMAA0ABAAAAAAAAAAMAA4ABAAAAAAAAAANAAAABAAAAAAAAAANAAEABAAAAAAAAAANAAIABAAAAAAAAAANAAMABAAAAAAAAAANAAQABAAAAAAAAAANAAUABAAAAAAAAAANAAYABAAAAAAAAAANAAcABAAAAAAAAAANAAgABAAAAAAAAAANAAkABAAAAAAAAAANAAoABAAAAAAAAAANAAsABAAAAAAAAAANAAwABAAAAAAAAAANAA0ABAAAAAAAAAANAA4ABAAAAAAAAAAOAAAABAAAAAAAAAAOAAEABAAAAAAAAAAOAAIABAAAAAAAAAAOAAMABAAAAAAAAAAOAAQABAAAAAAAAAAOAAUABAAAAAAAAAAOAAYABAAAAAAAAAAOAAcABAAAAAAAAAAOAAgABAAAAAAAAAAOAAkABAAAAAAAAAAOAAoABAAAAAAAAAAOAAsABAAAAAAAAAAOAAwABAAAAAAAAAAOAA0ABAAAAAAAAAAOAA4ABAAAAAAAAAAPAAEABAAAAAAAAAAPAAIABAAAAAAAAAAPAAMABAAAAAAAAAAPAAQABAAAAAAAAAAPAAUABAAAAAAAAAAPAAYABAAAAAAAAAAPAAcABAAAAAAAAAAPAAgABAAAAAAAAAAPAAkABAAAAAAAAAAPAAoABAAAAAAAAAAPAAsABAAAAAAAAAAPAAwABAAAAAAAAAAPAA0ABAAAAAAAAAAQAAEABAAAAAAAAAAQAAIABAAAAAAAAAAQAAMABAAAAAAAAAAQAAQABAAAAAAAAAAQAAUABAAAAAAAAAAQAAYABAAAAAAAAAAQAAcABAAAAAAAAAAQAAgABAAAAAAAAAAQAAkABAAAAAAAAAAQAAoABAAAAAAAAAAQAAsABAAAAAAAAAAQAAwABAAAAAAAAAAQAA0ABAAAAAAAAAARAAEABAAAAAAAAAARAAIABAAAAAAAAAARAAMABAAAAAAAAAARAAQABAAAAAAAAAARAAUABAAAAAAAAAARAAYABAAAAAAAAAARAAcABAAAAAAAAAARAAgABAAAAAAAAAARAAkABAAAAAAAAAARAAoABAAAAAAAAAARAAsABAAAAAAAAAARAAwABAAAAAAAAAARAA0ABAAAAAAAAAASAAEABAAAAAAAAAASAAIABAAAAAAAAAASAAMABAAAAAAAAAASAAQABAAAAAAAAAASAAUABAAAAAAAAAASAAYABAAAAAAAAAASAAcABAAAAAAAAAASAAgABAAAAAAAAAASAAkABAAAAAAAAAASAAoABAAAAAAAAAASAAsABAAAAAAAAAASAAwABAAAAAAAAAASAA0ABAAAAAAAAAA=")
tile_set = ExtResource("2_1i7em")

[node name="WallsTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAADAA0AAgAAAAAAAAADAA4AAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAA0AAgAAAAAAAAAEAA4AAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAA4AAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA4AAgAAAAAAAAAHAAAAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAA4AAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA0AAgAAAAAAAAAIAA4AAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA0AAgAAAAAAAAAJAA4AAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA0AAgAAAAAAAAAKAA4AAgAAAAAAAAALAAAAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAA4AAgAAAAAAAAAMAAAAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAA4AAgAAAAAAAAANAAAAAgAAAAAAAAANAAYAAgAAAAAAAAANAAgAAgAAAAAAAAANAA4AAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAOAA4AAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA0AAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAwAAgAAAAAAAAARAA0AAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAASAA0AAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAAIAAgAAAAAAAAA=")
tile_set = ExtResource("2_1i7em")

[node name="Paths" type="Node2D" parent="."]

[node name="StartGroup1" parent="Paths" instance=ExtResource("4_tus8s")]
unique_name_in_owner = true
position = Vector2(225, 125)

[node name="StartGroup2" parent="Paths" instance=ExtResource("4_tus8s")]
unique_name_in_owner = true
position = Vector2(325, 375)

[node name="StartGroup3" parent="Paths" instance=ExtResource("4_tus8s")]
unique_name_in_owner = true
position = Vector2(225, 625)

[node name="EndPoint" parent="Paths" instance=ExtResource("4_tus8s")]
unique_name_in_owner = true
position = Vector2(925, 376)
default_animation_name = "red_grow"

[node name="KillZone" type="Area2D" parent="Paths"]
unique_name_in_owner = true
position = Vector2(935, 375)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/KillZone"]
shape = SubResource("RectangleShape2D_yyeby")

[connection signal="body_entered" from="Paths/KillZone" to="." method="_on_kill_zone_body_entered"]
